[gd_scene load_steps=26 format=3 uid="uid://cwn84aeknk1i7"]

[ext_resource type="Script" path="res://data/script/zone/main_menu.gd" id="1_mrvgp"]
[ext_resource type="Animation" uid="uid://c7mt8dbj3ecko" path="res://data/anim/zone/main_menu/TitleText_scaling.res" id="3_266b3"]
[ext_resource type="Animation" uid="uid://bvcxqim2iaqqo" path="res://data/anim/zone/main_menu/TitleText_RESET.res" id="4_cq1cg"]
[ext_resource type="FontFile" uid="uid://xluqv27b3tww" path="res://data/ui/font/PixelOperator8-Bold.ttf" id="5_47kov"]
[ext_resource type="Animation" uid="uid://cg1fgwfbiqbtt" path="res://data/anim/zone/main_menu/BaseMenu_fadeIn.res" id="5_dtu42"]
[ext_resource type="Material" uid="uid://bjuub1uhrgfe0" path="res://data/ui/canvas_item_mat.tres" id="5_qr285"]
[ext_resource type="Animation" uid="uid://ddbps3pg4dwff" path="res://data/anim/zone/main_menu/BaseMenu_fadeOut.res" id="6_ra2x4"]
[ext_resource type="Animation" uid="uid://lt883mbx3vet" path="res://data/anim/zone/main_menu/BaseMenu_RESET.res" id="7_gfrx1"]
[ext_resource type="Animation" uid="uid://b3w2l5pkr1rno" path="res://data/anim/zone/main_menu/OptionsMenu_fadeIn.res" id="8_jat3k"]
[ext_resource type="Animation" uid="uid://d0ee4ugpjts0c" path="res://data/anim/zone/main_menu/OptionsMenu_fadeOut.res" id="9_1lwpc"]
[ext_resource type="Animation" uid="uid://dema1fk2xgwyc" path="res://data/anim/zone/main_menu/OptionsMenu_RESET.res" id="10_c525x"]
[ext_resource type="FontFile" uid="uid://b7gbn816jlora" path="res://data/ui/font/PixelOperator8.ttf" id="11_82hlm"]
[ext_resource type="Animation" uid="uid://3aogxy3cwmc7" path="res://data/anim/zone/main_menu/CreditsMenu_fadeIn.res" id="11_j6pns"]
[ext_resource type="Animation" uid="uid://bgky778v1tsjr" path="res://data/anim/zone/main_menu/CreditsMenu_fadeOut.res" id="12_62gwk"]
[ext_resource type="Animation" uid="uid://byeptjh78swog" path="res://data/anim/zone/main_menu/CreditsMenu_RESET.res" id="13_tkgeo"]
[ext_resource type="Animation" uid="uid://scibl2c7tnet" path="res://data/anim/zone/main_menu/BackBtn_fadeIn.res" id="14_778c0"]
[ext_resource type="Animation" uid="uid://cbk5wnj2x4oiw" path="res://data/anim/zone/main_menu/BackBtn_fadeOut.res" id="15_vmlip"]
[ext_resource type="Animation" uid="uid://ifnhvkgtei42" path="res://data/anim/zone/main_menu/BackBtn_RESET.res" id="16_nl8dr"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ecx75"]
_data = {
"TitleText_RESET": ExtResource("4_cq1cg"),
"TitleText_scaling": ExtResource("3_266b3")
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_funh0"]
_data = {
"BaseMenu_RESET": ExtResource("7_gfrx1"),
"BaseMenu_fadeIn": ExtResource("5_dtu42"),
"BaseMenu_fadeOut": ExtResource("6_ra2x4")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jyujo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7rkx7"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7svbl"]
_data = {
"OptionsMenu_RESET": ExtResource("10_c525x"),
"OptionsMenu_fadeIn": ExtResource("8_jat3k"),
"OptionsMenu_fadeOut": ExtResource("9_1lwpc")
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_21woo"]
_data = {
"CreditsMenu_RESET": ExtResource("13_tkgeo"),
"CreditsMenu_fadeIn": ExtResource("11_j6pns"),
"CreditsMenu_fadeOut": ExtResource("12_62gwk")
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fu8vn"]
_data = {
"BackBtn_RESET": ExtResource("16_nl8dr"),
"BackBtn_fadeIn": ExtResource("14_778c0"),
"BackBtn_fadeOut": ExtResource("15_vmlip")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mrvgp")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -11.0
offset_top = -11.0
offset_right = 1163.0
offset_bottom = 661.0
color = Color(0, 0, 0, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 317.0
offset_top = 138.0
offset_right = 857.0
offset_bottom = 186.0
pivot_offset = Vector2(270, 24)
theme_override_colors/font_color = Color(1, 1, 0.74902, 1)
theme_override_fonts/font = ExtResource("5_47kov")
theme_override_font_sizes/font_size = 48
text = "JUMP? Knight"

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleLabel"]
libraries = {
"": SubResource("AnimationLibrary_ecx75")
}
autoplay = "TitleText_scaling"

[node name="BaseMenu" type="Control" parent="."]
modulate = Color(0, 0, 0, 1)
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="BaseMenu"]
libraries = {
"": SubResource("AnimationLibrary_funh0")
}

[node name="NewGameButton" type="Button" parent="BaseMenu"]
material = ExtResource("5_qr285")
layout_mode = 0
offset_left = 401.5
offset_top = 261.0
offset_right = 750.5
offset_bottom = 315.0
pivot_offset = Vector2(174.5, 27)
theme_override_colors/font_hover_pressed_color = Color(0, 1, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.701961, 0.321569, 1)
theme_override_colors/font_focus_color = Color(0.74902, 1, 0.72549, 1)
theme_override_fonts/font = ExtResource("5_47kov")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_jyujo")
disabled = true
text = "txt
"
flat = true

[node name="OptionsButton" type="Button" parent="BaseMenu"]
material = ExtResource("5_qr285")
layout_mode = 0
offset_left = 401.5
offset_top = 347.0
offset_right = 750.5
offset_bottom = 401.0
pivot_offset = Vector2(174.5, 27)
theme_override_colors/font_hover_pressed_color = Color(0, 1, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.701961, 0.321569, 1)
theme_override_colors/font_focus_color = Color(0.74902, 1, 0.72549, 1)
theme_override_fonts/font = ExtResource("5_47kov")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_7rkx7")
disabled = true
text = "txt"
flat = true

[node name="CreditsButton" type="Button" parent="BaseMenu"]
material = ExtResource("5_qr285")
layout_mode = 0
offset_left = 401.5
offset_top = 433.0
offset_right = 750.5
offset_bottom = 487.0
pivot_offset = Vector2(174.5, 27)
theme_override_colors/font_hover_pressed_color = Color(0, 1, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.701961, 0.321569, 1)
theme_override_colors/font_focus_color = Color(0.74902, 1, 0.72549, 1)
theme_override_fonts/font = ExtResource("5_47kov")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_7rkx7")
disabled = true
text = "txt"
flat = true

[node name="OptionsMenu" type="Control" parent="."]
modulate = Color(0, 0, 0, 1)
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="OptionsMenu"]
libraries = {
"": SubResource("AnimationLibrary_7svbl")
}

[node name="SFXOptionLabel" type="Label" parent="OptionsMenu"]
material = ExtResource("5_qr285")
layout_mode = 0
offset_left = 249.0
offset_top = 291.0
offset_right = 656.0
offset_bottom = 342.0
theme_override_fonts/font = ExtResource("5_47kov")
theme_override_font_sizes/font_size = 38
text = "txt"

[node name="SFXSlider" type="HSlider" parent="OptionsMenu"]
material = ExtResource("5_qr285")
layout_mode = 0
offset_left = 747.0
offset_top = 304.0
offset_right = 1058.0
offset_bottom = 324.0
max_value = 1.0
step = 0.001
value = 1.0
editable = false
scrollable = false

[node name="MusicOptionLabel" type="Label" parent="OptionsMenu"]
material = ExtResource("5_qr285")
layout_mode = 0
offset_left = 249.0
offset_top = 361.0
offset_right = 656.0
offset_bottom = 412.0
theme_override_fonts/font = ExtResource("5_47kov")
theme_override_font_sizes/font_size = 38
text = "txt"

[node name="MusicSlider" type="HSlider" parent="OptionsMenu"]
material = ExtResource("5_qr285")
layout_mode = 0
offset_left = 747.0
offset_top = 374.0
offset_right = 1058.0
offset_bottom = 394.0
max_value = 1.0
step = 0.001
value = 1.0
editable = false
scrollable = false

[node name="LangOptionLabel" type="Label" parent="OptionsMenu"]
material = ExtResource("5_qr285")
layout_mode = 0
offset_left = 249.0
offset_top = 431.0
offset_right = 656.0
offset_bottom = 482.0
theme_override_fonts/font = ExtResource("5_47kov")
theme_override_font_sizes/font_size = 38
text = "txt"

[node name="LangOptionButton" type="OptionButton" parent="OptionsMenu"]
material = ExtResource("5_qr285")
custom_minimum_size = Vector2(200, 50)
layout_mode = 0
offset_left = 801.0
offset_top = 431.0
offset_right = 1007.0
offset_bottom = 481.0
theme_override_colors/font_hover_pressed_color = Color(0, 1, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.701961, 0.321569, 1)
theme_override_colors/font_focus_color = Color(0.74902, 1, 0.72549, 1)
theme_override_fonts/font = ExtResource("11_82hlm")
theme_override_font_sizes/font_size = 31
disabled = true
flat = true
expand_icon = true
selected = 0
item_count = 2
popup/item_0/text = "English"
popup/item_1/text = "日本語"
popup/item_1/id = 1

[node name="CreditsMenu" type="Control" parent="."]
modulate = Color(0, 0, 0, 1)
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CreditsMenu"]
libraries = {
"": SubResource("AnimationLibrary_21woo")
}

[node name="MusicCreditLabel" type="Label" parent="CreditsMenu"]
material = ExtResource("5_qr285")
layout_mode = 0
offset_left = 108.0
offset_top = 274.0
offset_right = 175.0
offset_bottom = 303.0
theme_override_fonts/font = ExtResource("11_82hlm")
theme_override_font_sizes/font_size = 28
text = "txt"

[node name="ArtSFXCreditLabel" type="Label" parent="CreditsMenu"]
material = ExtResource("5_qr285")
layout_mode = 0
offset_left = 108.0
offset_top = 346.0
offset_right = 175.0
offset_bottom = 375.0
theme_override_fonts/font = ExtResource("11_82hlm")
theme_override_font_sizes/font_size = 28
text = "txt"

[node name="ProgCreditLabel" type="Label" parent="CreditsMenu"]
material = ExtResource("5_qr285")
layout_mode = 0
offset_left = 108.0
offset_top = 418.0
offset_right = 175.0
offset_bottom = 447.0
theme_override_fonts/font = ExtResource("11_82hlm")
theme_override_font_sizes/font_size = 28
text = "txt"

[node name="BackButton" type="Button" parent="."]
modulate = Color(0, 0, 0, 1)
material = ExtResource("5_qr285")
layout_mode = 0
offset_left = 857.0
offset_top = 583.0
offset_right = 1206.0
offset_bottom = 637.0
pivot_offset = Vector2(174.5, 27)
theme_override_colors/font_hover_pressed_color = Color(0, 1, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.701961, 0.321569, 1)
theme_override_colors/font_focus_color = Color(0.74902, 1, 0.72549, 1)
theme_override_fonts/font = ExtResource("5_47kov")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_7rkx7")
disabled = true
text = "txt"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="BackButton"]
libraries = {
"": SubResource("AnimationLibrary_fu8vn")
}

[connection signal="mouse_entered" from="BaseMenu/NewGameButton" to="." method="_on_new_game_button_mouse_entered"]
[connection signal="pressed" from="BaseMenu/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="mouse_entered" from="BaseMenu/OptionsButton" to="." method="_on_options_button_mouse_entered"]
[connection signal="pressed" from="BaseMenu/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="mouse_entered" from="BaseMenu/CreditsButton" to="." method="_on_credits_button_mouse_entered"]
[connection signal="pressed" from="BaseMenu/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="mouse_entered" from="OptionsMenu/SFXSlider" to="." method="_on_sfx_slider_mouse_entered"]
[connection signal="value_changed" from="OptionsMenu/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="mouse_entered" from="OptionsMenu/MusicSlider" to="." method="_on_music_slider_mouse_entered"]
[connection signal="value_changed" from="OptionsMenu/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="item_selected" from="OptionsMenu/LangOptionButton" to="." method="_on_lang_option_button_item_selected"]
[connection signal="mouse_entered" from="OptionsMenu/LangOptionButton" to="." method="_on_lang_option_button_mouse_entered"]
[connection signal="mouse_entered" from="BackButton" to="." method="_on_back_button_mouse_entered"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
